# news-data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: daily-fetch.yml  pages-preview.yml
app/application/: article_selector.py  daily_job.py
app/domain/: models.py
app/entrypoints/: backfill.py  preview_page_index.py  preview_render.py  run_daily_job.py
app/infrastructure/: clock.py  config.py
app/infrastructure/parser/: wechat_article_parser.py
app/infrastructure/render/: __init__.py  playwright_image_renderer.py  template.html  template_context_builder.py
app/infrastructure/storage/: local_json_repository.py  static_assets_repository.py
app/infrastructure/wechat/: mp_client.py
app/ports/: article_parser.py  image_renderer.py  repository.py  source_client.py
config/: accounts.yaml
docs/superpowers/plans/: 2026-03-27-m1-wechat-json-implementation.md  2026-03-27-m2-image-rendering-implementation.md  2026-03-27-m3-auto-publish-implementation.md  (+5 more)
pages/: app.js  index.html  styles.css
pages/data/: index.json
static/news/: 2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json
tests/fixtures/: wechat_article_sample.html
tests/integration/: test_cli_entrypoint.py  test_cli_outputs.py  test_daily_job.py  test_daily_job_images.py  test_end_to_end_composition.py  test_failure_modes.py  test_job_run_statuses.py  test_m2_backfill_and_failures.py  test_m2_composition.py  test_preview_render_entrypoint.py
tests/unit/: test_account_loader.py  test_article_selector.py  test_job_run_result.py  test_local_json_repository.py  test_models.py  test_mp_client.py  test_pages_app_navigation.py  test_playwright_image_renderer.py  test_preview_index.py  test_project_layout.py  test_render_template_exists.py  test_static_assets_contracts.py  test_static_assets_repository.py  test_template_context_builder.py  test_wechat_article_parser.py  test_workflow_contract.py  test_workflow_summary_contract.py
(+17 files in other folders)
