[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-static"
version = "0.1.0"
description = "WeChat daily news static JSON generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
  { name = "luckkyboy", email = "farboy0509@gmail.com" },
]
keywords = [
  "wechat",
  "news",
  "static-site",
  "playwright",
  "jinja2",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "Jinja2>=3.1.4",
  "Pillow>=10.4.0",
  "playwright>=1.52.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "selectolax>=0.3.21",
  "tenacity>=9.0.0",
]

[project.urls]
Homepage = "https://luckkyboy.github.io/news-data"
Repository = "https://github.com/luckkyboy/news-data"
Issues = "https://github.com/luckkyboy/news-data/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "respx>=0.21.1",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
